[workspace]
members = [
  "algorithms/0001.Two Sum",
  "algorithms/0002.Add Two Numbers",
  "algorithms/0005.Longest Palindromic Substring",
  "algorithms/0088.Merge Sorted Array",
  "algorithms/0121.Best Time to Buy and Sell Stock",
  "algorithms/0215.Kth Largest Element in an Array",
  "algorithms/0881.Boats to Save People",
  "algorithms/1641.Count Sorted Vowel Strings",
  "algorithms/1646.Get Maximum in Generated Array",
  "algorithms/1649.Create Sorted Array through Instructions",
  "algorithms/1658.Minimum Operations to Reduce X to Zero",
  "algorithms/1658.Minimum Operations to Reduce X to Zero",
  "algorithms/1662.Check If Two String Arrays are Equivalent",
  "algorithms/1679.Max Number of K-Sum Pairs",
  "algorithms/utils"
]
