[workspace]
members = [
  "algorithms/0001.Two Sum",
  "algorithms/0002.Add Two Numbers",
  "algorithms/0005.Longest Palindromic Substring",
  "algorithms/0020.Valid Parentheses",
  "algorithms/0088.Merge Sorted Array",
  "algorithms/0121.Best Time to Buy and Sell Stock",
  "algorithms/0191.Number of 1 Bits",
  "algorithms/0215.Kth Largest Element in an Array",
  "algorithms/0314.Vertical Order Traversal of a Binary Tree",
  "algorithms/0594.Longest Harmonious Subsequence",
  "algorithms/0881.Boats to Save People",
  "algorithms/1329.Sort the Matrix Diagonally",
  "algorithms/1437.Check If All 1's Are at Least Length K Places Away",
  "algorithms/1631.Path With Minimum Effort",
  "algorithms/1641.Count Sorted Vowel Strings",
  "algorithms/1646.Get Maximum in Generated Array",
  "algorithms/1649.Create Sorted Array through Instructions",
  "algorithms/1657.Determine if Two Strings Are Close",
  "algorithms/1658.Minimum Operations to Reduce X to Zero",
  "algorithms/1658.Minimum Operations to Reduce X to Zero",
  "algorithms/1662.Check If Two String Arrays are Equivalent",
  "algorithms/1663.Smallest String With A Given Numeric Value",
  "algorithms/1679.Max Number of K-Sum Pairs",
  "algorithms/1680.Concatenation of Consecutive Binary Numbers",
  "algorithms/utils"
]
